backgrounds for customers and contact sections

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -60,7 +60,7 @@
 </section>
 
 <section class="cooperation">
-  <div class="bgnd-wrapper">
+  <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -119,28 +119,30 @@
   </div>
 </section>
 <section class="partners">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Who works with&nbsp;us</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
+  <div class="tm-bgnd-wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Who works with&nbsp;us</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <p>logo</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <p>logo</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <p>logo</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <p>logo</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+          <p>logo</p>
+        </div>
       </div>
     </div>
   </div>
@@ -149,7 +151,7 @@
 <section class="tm-case-studies">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="studies_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Case studies</h2>
         <p class="sub-text">We have learned something from every collaboration with our clients.</p>
       </div>
@@ -193,18 +195,20 @@
   </div>
 </section>
 
-<section class="costumers">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Our customers say that…</h2>
-        <blockquote>
-          <p>Working with TopMonks was really awesome. Working with TopMonks was really awesome.
-            Working with TopMonks was absolutely awesome.</p>
-        </blockquote>
-        <div class="name">
-          Jan Sechovec<br>
-          Universal Digital Punker
+<section class="customers">
+  <div class="tm-bgnd-wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Our customers say that…</h2>
+          <blockquote>
+            <p>Working with TopMonks was really awesome. Working with TopMonks was really awesome.
+              Working with TopMonks was absolutely awesome.</p>
+          </blockquote>
+          <div class="name">
+            Jan Sechovec<br>
+            Universal Digital Punker
+          </div>
         </div>
       </div>
     </div>
