--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -11,36 +11,36 @@
         <blockquote>
           <p>Success is a delivery not the time spent.</p>
         </blockquote>
-        <p> We don't need you messing around from 9 to 5 in the office. We want to deliver the perfection! As our
+        <p>We don't need you messing around from 9 to 5 in the office. We want to deliver the perfection! As our
           team is mostly distributed, we've worked diligently to improve the ways we work together, and with
           our clients. Don't count hours, deliver!</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>Slack</h3>
         <p>Effective communication is the essence of cooperation- not only across our projects, but also with some
           of our customers. We don't care where do you sit, but once you are working, you should be available.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>GitHub</h3>
         <p>All our projects are running in GitHub. Many of them also use GitHub Issues for tracking the progress.
           Together with Slack it is the alpha and omega of our cooperation.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>Quip</h3>
         <p>Here we share all the projects documentation, invoices, even our company library, basically our whole
           knowledge. Ask rarous for his amazing cook book!</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>Swarmpit</h3>
         <p>Most of our projects are containerized and run in Docker Swarm environment. For management of these
           we developed our own UI called Swarmpit.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>Monksheets</h3>
         <p>Now let's shake-off all the useless administration! If you need to control your project costs, ask for
           time-off or refund your expenses, you can do it online wherever and whenever you want from.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="box mdc-layout-grid__cell">
         <h3>Trello</h3>
         <p>Trello is a powerful tool to track the team's progress and to delegate the work.</p>
       </div>
