--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -1,5 +1,8 @@
 {% extends 'layouts/topmonks.html' %}
 {% block title %}Meet Us - TopMonks{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="/stylesheets/meet-us.css">
+{% endblock %}
 
 {% block content %}
 
@@ -15,16 +18,16 @@
             team is mostly distributed, we've worked diligently to improve the ways we work together, and with
             our clients. Don't count hours, deliver!</p>
         </div>
-        <div class="principle team mdc-layout-grid__cell">
+        <div class="box box--team mdc-layout-grid__cell">
           <h3>This is us</h3>
           <p>This is us. We are a passionate team of top notch devs, designers and team leaders who always want
             to give their best.</p>
         </div>
-        <div class="principle work mdc-layout-grid__cell">
+        <div class="box box--work mdc-layout-grid__cell">
           <h3>Our work</h3>
           <p>Our work brings us joy and we keep on educating - ourselves and the others.</p>
         </div>
-        <div class="principle love mdc-layout-grid__cell">
+        <div class="box box--love mdc-layout-grid__cell">
           <h3>We love</h3>
           <p>We love to share our knowledge not only among the company, but also with the world.</p>
         </div>
@@ -36,9 +39,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You can <b>meet us</b> here</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://caffe.topmonks.cz">TopMonks Caffè</a></h3>
             <p>Every first thursday of the month we hold regular meetup about everything we are interested in.
               Balanced mix of technical and soft themes delivered by our speakers and special guests.</p>
@@ -46,14 +49,14 @@
             <div class="links"><a href="https://caffe.topmonks.cz">https://caffe.topmonks.cz</a>
             </div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="https://caffe.topmonks.cz"><img alt="TopMonks Caffè logo" src="/images/community/tm-caffe.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://soundcloud.com/czpodcast-1">CZ Podcast</a></h3>
             <p>The most popular tech-podcast in Czech republic! Duo Filemon and Dagi + interesting guest = fun
               and knowledge guaranteed!</p>
@@ -61,14 +64,14 @@
             <div class="links"><a href="https://soundcloud.com/czpodcast-1">https://soundcloud.com/czpodcast-1</a>
             </div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="https://soundcloud.com/czpodcast-1"><img alt="CZ Podcast logo" src="/images/community/cz-podcast.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://codingdojo.cz/">Coding Dojo</a></h3>
             <p>Coding Dojo is a place, where you can come and train your knowledge in programming. It is organised
               regularly in different cities. Two hours are dedicated to solving Katas or other interesting
@@ -78,14 +81,14 @@
             <div class="links"><a href="http://codingdojo.cz/">http://codingdojo.cz/</a>
             </div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="http://codingdojo.cz/"><img alt="Coding Dojo logo" src="/images/community/coding-dojo.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
             <p>Code retreat is an intensive one day training focused on the basics of software development.
               Thanks to the fact that the developers are not under pressure of results delivery CodeRetreat
@@ -93,14 +96,14 @@
 
             <div class="links"><a href="https://coderetreat.cz/">https://coderetreat.cz/</a></div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="https://coderetreat.cz/"><img alt="Code Retreat CZ logo" src="/images/community/coderetreat-cz.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.asociaceux.cz/">Asociace UX</a></h3>
             <p>UX Asociace mainly focuses on forming and developing local UX market with regards to the foreign
               trends and experiences. Also it tries to rais awareness of the public about HCI, UX and offers
@@ -108,14 +111,14 @@
 
             <div class="links"><a href="http://www.asociaceux.cz/">http://www.asociaceux.cz/</a></div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="http://www.asociaceux.cz/"><img alt="Asociace UX logo" src="/images/community/ux-asociace.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://www.meetup.com/Lambda-Meetup-Group/">Prague Lambda</a></h3>
             <p>This meetup group was created as a group for functional programming enthusiasts, programmers
               interested in different programming languages which support FP paradigm: Erlang, Clojure,
@@ -123,14 +126,14 @@
 
             <div class="links"><a href="https://www.meetup.com/Lambda-Meetup-Group/">https://www.meetup.com/Lambda-Meetup-Group/</a></div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="https://www.meetup.com/Lambda-Meetup-Group/"><img alt="Prague Lambda logo" src="/images/community/prague-lambda.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
             <p>Our colleague Jirka decided to make his very own podcast with interesting guests. Starting with
               running, going through education system, ending with artificial intelligence - in Jirka’s
@@ -138,14 +141,14 @@
 
             <div class="links"><a href="http://devminutes.cz/">http://devminutes.cz/</a></div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="http://devminutes.cz/"><img alt="DevMinutes logo" src="/images/community/devminutes.png"></a>
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
             <p>Wisephora focuses on supporting the discussion about future of work and connecting people and
               organisations interested in these topics. You can be looking forward to lectures of skilled
@@ -155,7 +158,7 @@
 
             <div class="links"><a href="http://www.wisephora.com/">http://www.wisephora.com/</a></div>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <a class="img-link" href="http://www.wisephora.com/"><img alt="Wisephora logo" src="/images/community/wisephora.png"></a>
           </div>
         </div>
