--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -1,4 +1,3 @@
-{%- import 'macros/helpers.html' as macros -%}
 <link rel="stylesheet" href="/stylesheets/footer.css">
 <div class="nav-and-contacts">
   <div class="tm-layout-wrapper mdc-layout-grid">
@@ -8,7 +7,7 @@
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
         <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
           href="/references">project delivered by us</a>.
-          Or simply <a href="/contacts/">visit us</a>. We enjoy <a href="/community/">meeting interesting people</a>.
+          Or simply <a href="/contacts/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
         </p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
