--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/footer.css">
+
+<footer class="tm-footer">
 <div class="nav-and-contacts">
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
@@ -170,3 +172,4 @@
     </div>
   </div>
 </div>
+</footer>
