partner logos in utilizing blendid svg sprite functionality

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -112,82 +112,70 @@
     </div>
   </div>
 </section>
+
 <section class="partners">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Who works with&nbsp;us</h2>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
+          <ul class="tm-partners-list">
+            <li>{{macros.sprite('img_logo_cs')}}</li>
+            <li>{{macros.sprite('img_logo_erste-group')}}</li>
+            <li>{{macros.sprite('img_logo_pricefx')}}</li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="tm-case-studies">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Case studies</h2>
-        <p class="sub-text">We have learned something from every collaboration with our clients.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/sporka.jpg" alt="">
-        <h3>Česká spořitelna</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/pricefx.jpg" alt="">
-        <h3>PriceFX</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/purposefly.jpg" alt="">
-        <h3>PurposeFly</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/hearth.jpg" alt="">
-        <h3>Hearth.net</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/techloop.jpg" alt="">
-        <h3>Techloop.io</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/europe.jpg" alt="">
-        <h3>GoRealEurope.com</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-    </div>
-  </div>
-</section>
+<!--<section class="tm-case-studies">-->
+  <!--<div class="mdc-layout-grid tm-layout-wrapper">-->
+    <!--<div class="mdc-layout-grid__inner">-->
+      <!--<div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12">-->
+        <!--<h2>Case studies</h2>-->
+        <!--<p class="sub-text">We have learned something from every collaboration with our clients.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/sporka.jpg" alt="">-->
+        <!--<h3>Česká spořitelna</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/pricefx.jpg" alt="">-->
+        <!--<h3>PriceFX</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/purposefly.jpg" alt="">-->
+        <!--<h3>PurposeFly</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/hearth.jpg" alt="">-->
+        <!--<h3>Hearth.net</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/techloop.jpg" alt="">-->
+        <!--<h3>Techloop.io</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+      <!--<div-->
+        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
+        <!--<img src="/images/europe.jpg" alt="">-->
+        <!--<h3>GoRealEurope.com</h3>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</section>-->
 
 <section class="customers">
   <div class="tm-bgnd-wrapper">
