--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -6,7 +6,7 @@
 
   <section id="how-we-work" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-page-header">
         <h2>How we work</h2>
         <blockquote>
           <p>Success is a delivery not the time spent.</p>
