--- a/www.topmonks.com/src/html/shared/header.html
+++ b/www.topmonks.com/src/html/shared/header.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/stylesheets/header.css">
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
@@ -12,8 +13,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
         <a class="tm-logo" href="/" title="Go to homepage">
-          <svg class="monk" width="19px" height="23px" viewBox="0 0 19 23" version="1.1"
-               xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <svg class="monk" width="19px" height="23px" viewBox="0 0 19 23" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-265.000000, -67.000000)">
               <g transform="translate(265.000000, 66.000000)">
                 <path
@@ -36,6 +36,7 @@
       </div>
     </div>
   </div>
+
   <script>
     var appBar = document.querySelector(".tm-app-bar");
     var hamburger = document.querySelector(".tm-hamburger__container");
