--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -9,7 +9,7 @@
   <section class="principles">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="tm-page-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Community</h2>
           <blockquote>
             <p>Learn or die. Teach or die. Only learning and teaching brains flourish.</p>
