Meet us page improvements

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -39,7 +39,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You can <b>meet us</b> here</h2>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://caffe.topmonks.cz">TopMonks Caffè</a></h3>
@@ -50,11 +50,11 @@
             </div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="https://caffe.topmonks.cz"><img alt="TopMonks Caffè logo" src="/images/community/tm-caffe.png"></a>
+            <a href="https://caffe.topmonks.cz"><img class="tm-meetup__img" alt="TopMonks Caffè logo" src="/images/community/caffe.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://soundcloud.com/czpodcast-1">CZ Podcast</a></h3>
@@ -65,11 +65,11 @@
             </div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="https://soundcloud.com/czpodcast-1"><img alt="CZ Podcast logo" src="/images/community/cz-podcast.png"></a>
+            <a class="img-link" href="https://soundcloud.com/czpodcast-1"><img class="tm-meetup__img" alt="CZ Podcast logo" src="/images/community/cz-podcast.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://codingdojo.cz/">Coding Dojo</a></h3>
@@ -82,11 +82,11 @@
             </div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="http://codingdojo.cz/"><img alt="Coding Dojo logo" src="/images/community/coding-dojo.png"></a>
+            <a class="img-link" href="http://codingdojo.cz/"><img class="tm-meetup__img" alt="Coding Dojo logo" src="/images/community/coding-dojo.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
@@ -97,11 +97,11 @@
             <div class="links"><a href="https://coderetreat.cz/">https://coderetreat.cz/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="https://coderetreat.cz/"><img alt="Code Retreat CZ logo" src="/images/community/coderetreat-cz.png"></a>
+            <a class="img-link" href="https://coderetreat.cz/"><img class="tm-meetup__img" alt="Code Retreat CZ logo" src="/images/community/coderetreat-cz.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.asociaceux.cz/">Asociace UX</a></h3>
@@ -112,11 +112,11 @@
             <div class="links"><a href="http://www.asociaceux.cz/">http://www.asociaceux.cz/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="http://www.asociaceux.cz/"><img alt="Asociace UX logo" src="/images/community/ux-asociace.png"></a>
+            <a class="img-link" href="http://www.asociaceux.cz/"><img class="tm-meetup__img" alt="Asociace UX logo" src="/images/community/ux-asociace.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://www.meetup.com/Lambda-Meetup-Group/">Prague Lambda</a></h3>
@@ -127,11 +127,11 @@
             <div class="links"><a href="https://www.meetup.com/Lambda-Meetup-Group/">https://www.meetup.com/Lambda-Meetup-Group/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="https://www.meetup.com/Lambda-Meetup-Group/"><img alt="Prague Lambda logo" src="/images/community/prague-lambda.png"></a>
+            <a class="img-link" href="https://www.meetup.com/Lambda-Meetup-Group/"><img class="tm-meetup__img" alt="Prague Lambda logo" src="/images/community/prague-lambda.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
@@ -142,11 +142,11 @@
             <div class="links"><a href="http://devminutes.cz/">http://devminutes.cz/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="http://devminutes.cz/"><img alt="DevMinutes logo" src="/images/community/devminutes.png"></a>
+            <a class="img-link" href="http://devminutes.cz/"><img class="tm-meetup__img" alt="DevMinutes logo" src="/images/community/devminutes.png"></a>
           </div>
         </div>
       </div>
-      <div class="tm-meetup mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
@@ -159,7 +159,7 @@
             <div class="links"><a href="http://www.wisephora.com/">http://www.wisephora.com/</a></div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-            <a class="img-link" href="http://www.wisephora.com/"><img alt="Wisephora logo" src="/images/community/wisephora.png"></a>
+            <a class="img-link" href="http://www.wisephora.com/"><img class="tm-meetup__img" alt="Wisephora logo" src="/images/community/wisephora.png"></a>
           </div>
         </div>
       </div>
