--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -39,8 +39,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You can <b>meet us</b> here</h2>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://caffe.topmonks.cz">TopMonks Caffè</a></h3>
             <p>Every first thursday of the month we hold regular meetup about everything we are interested in.
@@ -54,8 +54,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://soundcloud.com/czpodcast-1">CZ Podcast</a></h3>
             <p>The most popular tech-podcast in Czech republic! Duo Filemon and Dagi + interesting guest = fun
@@ -69,8 +69,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://codingdojo.cz/">Coding Dojo</a></h3>
             <p>Coding Dojo is a place, where you can come and train your knowledge in programming. It is organised
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
@@ -101,8 +101,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.asociaceux.cz/">Asociace UX</a></h3>
             <p>UX Asociace mainly focuses on forming and developing local UX market with regards to the foreign
@@ -116,8 +116,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://www.meetup.com/Lambda-Meetup-Group/">Prague Lambda</a></h3>
             <p>This meetup group was created as a group for functional programming enthusiasts, programmers
@@ -131,8 +131,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
             <p>Our colleague Jirka decided to make his very own podcast with interesting guests. Starting with
@@ -146,8 +146,8 @@
           </div>
         </div>
       </div>
-      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
             <p>Wisephora focuses on supporting the discussion about future of work and connecting people and
